# DevFolio

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GUIDE.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml
devfolio/: __init__.py  exceptions.py  i18n.py  log.py  main.py
devfolio/commands/: ai.py  common.py  config.py  data.py  export.py  init_cmd.py  project.py  scan.py  serve.py  sync.py  task.py
devfolio/core/: ai_service.py  export_engine.py  git_scanner.py  project_manager.py  storage.py  sync_service.py  template_engine.py
devfolio/examples/: devfolio_portfolio.yaml
devfolio/locales/: en.py  ko.py
devfolio/models/: config.py  draft.py  project.py
devfolio/prompts/ko/: review_prompt.md  system_prompt.md  user_prompt.md
devfolio/templates/: base.md.j2  career_default.md.j2  portfolio_default.md.j2  portfolio_dev.md.j2  project_single.md.j2  resume_achievement.md.j2  resume_compact.md.j2  resume_default.md.j2
devfolio/utils/: security.py
devfolio/web/: __init__.py  app.py  experience_mapper.py
devfolio/web/routes/: __init__.py  api.py  ui.py
devfolio/web/static/: app.js  studio_v2.css  studio_v2.js  style.css
devfolio/web/templates/: index.html
docs/: devfolio_backend_portfolio.md
examples/: connected_car_gateway.yaml
tests/: test_ai_service.py  test_cli_commands.py  test_defects.py  test_export_engine.py  test_models.py  test_project_manager.py  test_sync_service.py  test_template_engine.py  test_web_api.py
